...
 */
private const val BUTTON_WIDTH = 150

/**
 * The tag used to identify the login view login button.
 */
const val LOGIN_VIEW_LOGIN_BUTTON = "LoginLoginButton"

const val LOGIN_VIEW_REGISTER_BUTTON = "LoginViewRegisterButton"

/**
 * The LoginView composable that displays the login screen.
 *
 * @param modifier the modifier to be applied to the composable
 * @param onLoginChange the callback to be invoked when the user wants to login
...
