...

/**
 * Taf for [MyTextField] used for testing.
 */
const val MY_TEXT_FIELD_TAG = "MyTextField"

const val MY_TEXT_FIELD_TRAILING_ICON_TAG = "MyTextFieldTrailingIcon"

/**
 * The height of the spacer between the text label and the text field.
 */
private const val TEXT_FIELD_SPACER_HEIGHT = 10

...
